# TurkishMorphologicalDisambiguation-C

./: CMakeLists.txt  README.md  conanfile.py
Test/: DummyDisambiguationTest.c  LongestRootFirstDisambiguationTest.c
src/: AutoDisambiguator.c  AutoDisambiguator.h  CMakeLists.txt  DummyDisambiguation.c  DummyDisambiguation.h  HmmDisambiguation.c  HmmDisambiguation.h  LongestRootFirstDisambiguation.c  LongestRootFirstDisambiguation.h  RootFirstDisambiguation.c  RootFirstDisambiguation.h
